# openCV_project

./: CMakeLists.txt
Backend/Include/: CmCut.h  CmGaussianMModel.h  segment-image.h
Frontend/: mainwindow.cpp  mainwindow.ui
